--- a/index.html
+++ b/index.html
@@ -2,25 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="#">
+<script type="text/javascript" src="js/index.js"></script>
 	<title>Quadratic equation</title>
 </head>
 <body>
-<script type="text/javascript">
 
-
-var a = prompt("Enter value for A", "0");
-var b = prompt("Enter value for B", "0");
-var c = prompt("Enter value for C", "0");
-
-var root = Math.sqrt(b*b-4*a*c);
-var root1 = (-b+root)/2*a;
-var root2 = (-b -root)/2*a;
-
-document.write("First root: " + root1 + "</br>");
-document.write("Second root: " + root2 + "</br>");
-
-</script>
 
 </body>
 </html>
